[package]
name = "stdweb"
version = "0.1.1"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/stdweb"
homepage = "https://github.com/koute/stdweb"
documentation = "https://docs.rs/stdweb/*/stdweb/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["api-bindings", "gui", "web-programming"]
description = "A standard library for the client-side Web"
build = "src/build.rs"

[dependencies]
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
clippy = { version = "0.0", optional = true }

[dev-dependencies]
serde_json = "1"
serde_derive = "1"

[build-dependencies]
curl = "0.4.8"
flate2 = "0.2"
tar = "0.4"
webidl = { path = "../webidl-rs", version = "0.3.2" }

[features]
default = ["serde", "serde_json"]
dev = ["serde", "serde_json", "clippy"]
serde-support = ["serde", "serde_json"]
